--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<style>body{background-color:#000;color:#fff}
-</style><link rel="stylesheet" href="styles-WJBVTTMX.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-WJBVTTMX.css"></noscript></head>
+<style>@font-face{font-style:light;font-weight:300;font-family:HurmeGeometricSans4;src:url("./media/HurmeGeometricSans4_Thin-ZZSJWOKQ.otf") format("opentype")}@font-face{font-style:bold;font-weight:700;font-family:HurmeGeometricSans4;src:url("./media/HurmeGeometricSans4_Bold-24P3QPGK.otf") format("opentype")}@font-face{font-style:normal;font-weight:400;font-family:HurmeGeometricSans4;src:url("./media/HurmeGeometricSans4-7TPVWCLJ.otf") format("opentype")}body{background-color:#000;color:#fff;font-family:HurmeGeometricSans4,Times New Roman;line-height:27px}
+</style><link rel="stylesheet" href="styles-FSKJXBZ3.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-FSKJXBZ3.css"></noscript></head>
 <body>
   <div class="container-fluid">
     <app-root></app-root>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-OT3FDH7H.js" type="module"></script></body>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-O546VKYK.js" type="module"></script></body>
 </html>
