--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
     <app-root></app-root>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-IYM6E3WJ.js" type="module"></script></body>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-62I3GTBJ.js" type="module"></script></body>
 </html>
